--- a/feature_extraction_of_audio.ipynb
+++ b/feature_extraction_of_audio.ipynb
@@ -29,7 +29,7 @@
       "metadata": {
         "id": "sdoW9tSoYfC3",
         "colab_type": "code",
-        "outputId": "b7460357-8963-4e31-e918-06e35b602e0c",
+        "outputId": "0e8a9be5-236a-4ea9-efa1-afa9f99464c2",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -59,15 +59,15 @@
         "  print('User uploaded file \"{name}\" with length {length} bytes'.format(\n",
         "      name=fn, length=len(uploaded[fn])))"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-3dd7a57e-245b-4ca3-8c26-b1e61ee230bd\" name=\"files[]\" multiple disabled />\n",
-              "     <output id=\"result-3dd7a57e-245b-4ca3-8c26-b1e61ee230bd\">\n",
+              "     <input type=\"file\" id=\"files-8a603393-91e8-4816-9739-5fdf8854fb6b\" name=\"files[]\" multiple disabled />\n",
+              "     <output id=\"result-8a603393-91e8-4816-9739-5fdf8854fb6b\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -95,18 +95,18 @@
       "metadata": {
         "id": "vXcFoieUlzKt",
         "colab_type": "code",
-        "outputId": "5d5ee14b-ec35-4d29-cd52-987c1cd68a95",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 75
-        }
+        },
+        "outputId": "d1d3a64b-398d-41b9-f9da-922e66832563"
       },
       "cell_type": "code",
       "source": [
         "import IPython.display as ipd\n",
         "ipd.Audio('human.wav')"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -134,17 +134,17 @@
       "metadata": {
         "id": "9S9nCHagu6DJ",
         "colab_type": "code",
-        "outputId": "81230694-c209-4182-b28b-eb6f17554fd9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        }
+        },
+        "outputId": "92af9fa0-d090-4d1a-a852-6c5aef120df2"
       },
       "cell_type": "code",
       "source": [
         "!pip install librosa"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,6 +164,19 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "metadata": {
+        "id": "J3La36AkixEW",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
@@ -200,11 +213,11 @@
       "metadata": {
         "id": "66gcJDwzwrf0",
         "colab_type": "code",
-        "outputId": "f2ccb872-d2a5-4d33-906f-b4af86af4672",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "557110b9-1a5d-4284-9173-69a46e367e6e"
       },
       "cell_type": "code",
       "source": [
@@ -213,7 +226,7 @@
         "                     sr=None)\n",
         "print(len(y_orig), sr_orig)"
       ],
-      "execution_count": 0,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -228,11 +241,11 @@
       "metadata": {
         "id": "0QFnOazgwvee",
         "colab_type": "code",
-        "outputId": "69a03ec8-37ff-4a09-e34f-4992e76809bd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "4a9fb361-de4f-42fe-be8b-6bd0bb07d179"
       },
       "cell_type": "code",
       "source": [
@@ -242,7 +255,7 @@
         "\n",
         "print(len(y), sr)"
       ],
-      "execution_count": 0,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -257,17 +270,17 @@
       "metadata": {
         "id": "jhYlj_HPyKJQ",
         "colab_type": "code",
-        "outputId": "0510f826-0736-4c24-fb30-6288d291cb97",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "f22a3abf-2635-481c-c4ca-970b3889d83b"
       },
       "cell_type": "code",
       "source": [
         "print(librosa.samples_to_time(len(y), sr))"
       ],
-      "execution_count": 0,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -282,18 +295,18 @@
       "metadata": {
         "id": "ljA509USyOO9",
         "colab_type": "code",
-        "outputId": "4da68db8-4d50-42d5-d216-e6868a14a5b5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "0e8ba207-13c9-4a50-eb4d-060b67db9ce7"
       },
       "cell_type": "code",
       "source": [
         "D = librosa.stft(y)\n",
         "print(D.shape, D.dtype)"
       ],
-      "execution_count": 0,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -308,11 +321,11 @@
       "metadata": {
         "id": "O40b5eKz1NZk",
         "colab_type": "code",
-        "outputId": "e66ed82d-a5cd-4e3c-a83b-dc71d4b68863",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "6363c3f5-c3f3-4bf5-c10e-26660e82c859"
       },
       "cell_type": "code",
       "source": [
@@ -320,7 +333,7 @@
         "S, phase = librosa.magphase(D)\n",
         "print(S.dtype, phase.dtype, np.allclose(D, S * phase))"
       ],
-      "execution_count": 0,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -335,11 +348,11 @@
       "metadata": {
         "id": "Oy98XzNi1i8x",
         "colab_type": "code",
-        "outputId": "e31d7670-11b0-4786-cf6b-5dcce558b809",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "cbf65ea9-043e-40a2-e4c2-36512a75a6d1"
       },
       "cell_type": "code",
       "source": [
@@ -347,7 +360,7 @@
         "\n",
         "print(C.shape, C.dtype)"
       ],
-      "execution_count": 0,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -362,11 +375,11 @@
       "metadata": {
         "id": "UnWKgsxk1p1r",
         "colab_type": "code",
-        "outputId": "8c0c2735-513a-4ae9-88f2-6fb54d668d14",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "fa967bc0-05d2-421f-fb34-ec87e7b9d560"
       },
       "cell_type": "code",
       "source": [
@@ -378,7 +391,7 @@
         "\n",
         "print(np.allclose(melspec, melspec_stft))"
       ],
-      "execution_count": 0,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -429,11 +442,11 @@
       "metadata": {
         "id": "y3_RE3Vs11YW",
         "colab_type": "code",
-        "outputId": "32d326c2-749f-4b5d-b9a6-86fa6adaf44b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 296
-        }
+        },
+        "outputId": "9e3c1734-f67a-465e-a02e-b613826112e4"
       },
       "cell_type": "code",
       "source": [
@@ -441,13 +454,13 @@
         "plt.figure(figsize=(12,4))\n",
         "librosa.display.waveplot(y=y, sr=sr)"
       ],
-      "execution_count": 0,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PolyCollection at 0x7f68113f7860>"
+              "<matplotlib.collections.PolyCollection at 0x7feafd256470>"
             ]
           },
           "metadata": {
@@ -471,19 +484,29 @@
     },
     {
       "metadata": {
+        "id": "UsT5lGSqwkbw",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "maximum intensity"
+      ]
+    },
+    {
+      "metadata": {
         "id": "ltVSSuq9oSBk",
         "colab_type": "code",
-        "outputId": "3d0dd28b-0598-4a2f-bbcb-3c8865539947",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "16a2a365-7f09-4367-d49a-21453f886e0f"
       },
       "cell_type": "code",
       "source": [
         "max(y)"
       ],
-      "execution_count": 0,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -501,19 +524,29 @@
     },
     {
       "metadata": {
+        "id": "GpyvYbMFwpo_",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "minimum intensity\n"
+      ]
+    },
+    {
+      "metadata": {
         "id": "PEhZJ08Up33F",
         "colab_type": "code",
-        "outputId": "a2b8d0f3-eaf6-4b43-b49b-4c40292c3be3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "20ff2df7-dbae-4409-ef8e-f44cea954810"
       },
       "cell_type": "code",
       "source": [
         "min(y)"
       ],
-      "execution_count": 0,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -531,19 +564,29 @@
     },
     {
       "metadata": {
+        "id": "E8QLmX0uwtng",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "Average intensity"
+      ]
+    },
+    {
+      "metadata": {
         "id": "xdsM7vjlp6In",
         "colab_type": "code",
-        "outputId": "f6b1ae30-8765-435e-90ff-d6d4f86271b2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "7a9cbf24-c2d8-4aa4-faf9-056c8b2201b0"
       },
       "cell_type": "code",
       "source": [
         "np.mean(y)"
       ],
-      "execution_count": 0,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -561,13 +604,56 @@
     },
     {
       "metadata": {
+        "id": "rD3Pqstmwv4t",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "5967fa18-8ce5-48f5-929f-a39f4c01a354"
+      },
+      "cell_type": "code",
+      "source": [
+        "pauses=0\n",
+        "for intensity in y:\n",
+        "  if intensity==0:\n",
+        "    pauses+=1\n",
+        "print(' Total number of pauses',pauses)\n",
+        "    "
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            " Total number of pauses 1446\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "aOdDpxFox6qW",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
         "id": "MCkT0IgY16jt",
         "colab_type": "code",
-        "outputId": "34228755-696d-4ab7-9c8e-5e83d7d8248d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 296
-        }
+        },
+        "outputId": "28d9a87d-2de5-468a-89ea-553493c947b2"
       },
       "cell_type": "code",
       "source": [
@@ -575,19 +661,19 @@
         "librosa.display.specshow(melspec, y_axis='mel', x_axis='time')\n",
         "plt.colorbar()"
       ],
-      "execution_count": 0,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.colorbar.Colorbar at 0x7f680c450a20>"
+              "<matplotlib.colorbar.Colorbar at 0x7feaf82cb908>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 20
+          "execution_count": 22
         },
         {
           "output_type": "display_data",
@@ -600,39 +686,6 @@
           "metadata": {
             "tags": []
           }
-        }
-      ]
-    },
-    {
-      "metadata": {
-        "id": "wB1xlcnD19_4",
-        "colab_type": "code",
-        "outputId": "6236d059-58a2-46bc-844b-37cccbac6434",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 233
-        }
-      },
-      "cell_type": "code",
-      "source": [
-        "X = librosa.feature.duration()\n",
-        "\n",
-        "plt.figure()\n",
-        "\n",
-        "librosa.display.specshow(x,x_axis='Time',y_axis='')"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-21-5dc2eb6eb45f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlibrosa\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfeature\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mduration\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mlibrosa\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mspecshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx_axis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'Time'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_axis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: module 'librosa.feature' has no attribute 'duration'"
-          ]
         }
       ]
     }
